--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Mine Sweeper</title>
 </head>
 
-<body onload="initGame()">
+<body style="background-image: url('img/bg.jpg')" onload="initGame()">
     <h1>Mine Sweeper</h1>
     <div class="level-scale"></div>
     <div class="score-time"></div>
