--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="board"></div>
     <div class="hearts-hints"></div>
     <div class="safe-undo">
-        <button class="safe" type="button" onclick="selfClicked()">Safe Click</button>
+        <button class="safe" type="button" onclick="safeClicked()">Safe Click</button>
         <button class="undo" type="button">Undo</button>
     </div>
     <div class="winners-list">
